ensure that images won't be too much scaled up, which would make them look very blurry
note: max-dimensions might need some tuning

--- a/web/static/css/sass/_swipe.scss
+++ b/web/static/css/sass/_swipe.scss
@@ -9,6 +9,7 @@
 
 .swipe-overlay {
   height: 100%;
+  overflow: hidden;
 }
 
 .swipe {
@@ -29,6 +30,17 @@
   width: 100%;
   position: relative;
   height: inherit;
+
+  // see css-tricks.com/centering-in-the-unknown
+  // using table display would disable the following max-width/height properties
+  text-align: center;
+  font-size: 0;
+  &:before {
+    content: ' ';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
 }
 
 .swipe-img {
@@ -36,6 +48,20 @@
   background-position: center;
   background-repeat: no-repeat;
   height: inherit;
+  width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+
+  $MI_max: 300px; // displaying MI images bigger would be too blurry (original size: 250px max)
+  $BI_max: 800px;
+  &[style*='MI.'] {
+    max-width: $MI_max;
+    max-height: $MI_max;
+  }
+  &[style*='BI.'] {
+    max-width: $BI_max;
+    max-height: $BI_max;
+  }
 }
 
 $meta_hor_padding: 8px;
@@ -46,11 +72,10 @@ $meta_vert_padding: 4px;
   background-color: rgba(34, 34,34, .6);
   color: #d6d6d6;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   width: 100%;
   padding: $meta_vert_padding $meta_hor_padding;
   @include box-sizing(border-box);
-
   @include transition(transform, 1s);
 }
 
